# glue-data-commons

./: README.md  setup.cfg
glue_data_commons/: __init__.py  menubar_plugin.py  state.py
glue_data_commons/qt/: data_commons.py  data_commons.ui
