[metadata]
name = glue-data-commons
url = https://www.gluesolutions.io
author = glue solutions, inc.
author_email = jfoster@gluesolutions.io
classifiers =
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Visualization
    License :: OSI Approved :: BSD License
description = Menubar plugin for getting data from Data Commons [https://www.datacommons.org]
version = 0.1

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    glueviz
    data_commons_pandas
    
[options.entry_points]
glue.plugins =
    glue_data_commons = glue_data_commons:setup

[options.extras_require]
qt =
    PyQt5>=5.9
test =
    pytest

[options.package_data]
* = *.png, *.ui, *.glu, *.hdf5, *.fits, *.xlsx, *.txt, *.csv, *.svg, *.vot, *.bgz, *.tbi
